# mini-esm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore  README.md
miniesm/: __init__.py  attention.py  data.py  tokenizer.py
reference/: __init__.py  blosum.py  mlp_numpy.py
scripts/: download_swissprot.py
tests/: test_attention.py  test_data.py  test_reference.py  test_tokenizer.py
